--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@
       <div class="founder">
         <img src="https://via.placeholder.com/100" alt="Founder 1">
         <div>
-          <h4>Anand Jain</h4>
+          <h4>Anand</h4>
           <p>With over 20 years of experience in software engineering, Anand Jain has led cutting-edge initiatives at companies like Google and Accenture. Holding an AI certification from Caltech and an MBA from the University of Chicago, Anand brings deep technical insight and executive strategy to Kronos Capital's mission of transforming the financial frontier.</p>
         </div>
       </div>
       <div class="founder">
         <img src="https://via.placeholder.com/100" alt="Founder 2">
         <div>
-          <h4>Soham Jain</h4>
+          <h4>Soham </h4>
           <p>Soham is a young founder from Georgia who recently completed his Bachelor's in Computer Science at Georgia Tech and is now pursuing a Master's degree in Machine Learning. Since childhood, he’s been passionate about mathematics and financial systems. At Kronos Capital, Soham merges his technical foundation and lifelong curiosity to reimagine intelligent investment strategies for the future.</p>
         </div>
       </div>
